GH-480 Allow to predownload a file with URL